added changelog and updated build script